website/versioned_docs/version-0.51/view-style-props.md
---
id: version-0.51-view-style-props
title: View Style Props
original_id: view-style-props
---

### Props

* [`borderRightColor`](view-style-props.md#borderrightcolor)
* [`backfaceVisibility`](view-style-props.md#backfacevisibility)
* [`borderBottomColor`](view-style-props.md#borderbottomcolor)
* [`borderBottomEndRadius`](view-style-props.md#borderbottomendradius)
* [`borderBottomLeftRadius`](view-style-props.md#borderbottomleftradius)
* [`borderBottomRightRadius`](view-style-props.md#borderbottomrightradius)
* [`borderBottomStartRadius`](view-style-props.md#borderbottomstartradius)
* [`borderBottomWidth`](view-style-props.md#borderbottomwidth)
* [`borderColor`](view-style-props.md#bordercolor)
* [`borderEndColor`](view-style-props.md#borderendcolor)
* [`borderLeftColor`](view-style-props.md#borderleftcolor)
* [`borderLeftWidth`](view-style-props.md#borderleftwidth)
* [`borderRadius`](view-style-props.md#borderradius)
* [`backgroundColor`](view-style-props.md#backgroundcolor)
* [`borderRightWidth`](view-style-props.md#borderrightwidth)
* [`borderStartColor`](view-style-props.md#borderstartcolor)
* [`borderStyle`](view-style-props.md#borderstyle)
* [`borderTopColor`](view-style-props.md#bordertopcolor)
* [`borderTopEndRadius`](view-style-props.md#bordertopendradius)
* [`borderTopLeftRadius`](view-style-props.md#bordertopleftradius)
* [`borderTopRightRadius`](view-style-props.md#bordertoprightradius)
* [`borderTopStartRadius`](view-style-props.md#bordertopstartradius)
* [`borderTopWidth`](view-style-props.md#bordertopwidth)
* [`borderWidth`](view-style-props.md#borderwidth)
* [`opacity`](view-style-props.md#opacity)
* [`elevation`](view-style-props.md#elevation)

---

# Reference

## Props

### `borderRightColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `backfaceVisibility`

| Type                      | Required |
| ------------------------- | -------- |
| enum('visible', 'hidden') | No       |

---

### `borderBottomColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderBottomEndRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderBottomLeftRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderBottomRightRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderBottomStartRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderBottomWidth`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderEndColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderLeftColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderLeftWidth`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `backgroundColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderRightWidth`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderStartColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderStyle`

| Type                              | Required |
| --------------------------------- | -------- |
| enum('solid', 'dotted', 'dashed') | No       |

---

### `borderTopColor`

| Type               | Required |
| ------------------ | -------- |
| [color](colors.md) | No       |

---

### `borderTopEndRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderTopLeftRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderTopRightRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderTopStartRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderTopWidth`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderWidth`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `opacity`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `elevation`

(Android-only) Sets the elevation of a view, using Android's underlying [elevation API](https://developer.android.com/training/material/shadows-clipping.html#Elevation). This adds a drop shadow to the item and affects z-order for overlapping views. Only supported on Android 5.0+, has no effect on earlier versions.

| Type   | Required | Platform |
| ------ | -------- | -------- |
| number | No       | Android  |
